<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/textViewHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="98dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginTop="55dp" app:layout_constraintTop_toBottomOf="@+id/textViewHello"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="222dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="101dp" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginBottom="179dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>